# a-finite-monkey-engine

./: .gitignore  .gitignore.ApiNotes.md  .sesskey  AGENT_ARCHITECTURE.md  FIXES.md  LLM_MODEL_EVALUATION.md  NEXT_STEPS.md  README.md  a-finite-monkey-engine.code-workspace  analyze.py  analyzed.md  bootstrap.sh  check_starlight_structure.sh  cleanup_project.sh  debug_pipeline.ApiNotes.md  debug_pipeline.py  factory.py  find_service_context.py  finite_monkey.db  fix_syntax.sh  genaiscript.config.json  install.sh  organize_codebase.sh  package-lock.json  package.json  pyproject.toml  requirements-direct.txt  requirements-web.txt  requirements.lock.txt  requirements.txt  run.py  run_async_workflow.py  run_atomic_workflow.py  run_cognitive_bias.py  run_enhanced_audit.py  run_simple_workflow.py  run_visualization.py  setup.py  start.py  start_starlight.sh  (+5 more)
.uv/: config.toml
a_finite_monkey_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
debug_output/: analysis_report_20250328_160627.md  analysis_report_20250330_002539.md  analysis_report_20250330_010816.md  analysis_report_20250330_040128.md  analysis_report_20250330_051854.md  analysis_report_20250330_060750.md
docs/: ASYNC_WORKFLOW.md  CHANGES.md  CONFIG.md  QUICKSTART.md  TODO.md  WEB_INTERFACE.md  WIKI.md  curr flow.md  dataset_text_analysis.py.ApiNotes.md  derived_vs_acquired.md
documentation/: analysis_components.md  analysis_flow_chart.md  architecture.md
examples/: README.md  SimpleVault.sol  Vault.sol  check_models.py  chunking_demo.py  emergency_fix.py  engine_terminal.py  enhanced_audit_pipeline.py  enhanced_terminal.py  fix_llama_index.py  guidance-example.js  guidance-flow-analysis.js  integrated_terminal.py  jupyter_standalone.py  run-old.py  run.py  run_analysis.sh  run_analysis_pipeline.py  run_async_analyzer.py  run_async_workflow.py  run_audit.sh  run_direct.py  run_engine_terminal.sh  run_enhanced_audit.sh  run_enhanced_chunking_audit.py  run_enhanced_terminal.sh  run_fasthtml_web.sh  run_integrated_terminal.sh  run_integrated_ui.sh  run_jupyter.sh  run_jupyter_iframe.py  run_jupyter_terminal.py  run_jupyter_web.sh  run_minimal_jupyter.py  run_mock.py  run_pipeline.sh  run_simple_analyzer.py  run_simple_terminal.sh  run_web.sh  run_web_interface.py  (+14 more)
finite_monkey/: __init__.py  __main__.py  analyze.py.ApiNotes.md  app.py  core_async_analyzer.py  enhanced_async_analyzer.py  nodes_config.py  test_chunking.py  timeline.CopilotNotes.md
finite_monkey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
genaisrc/: system.python.genai.mts  test.genai.mts
guidance_integration/: __init__.py  __main__.py  adapter.py  api.py  bridge.ts  business_flow.py  business_flow_analyzer.py  cli.py  config.py  core.py  guidance_adapter.py  guidance_manager.py  index.js  install.sh  llama_index_adapter.py  models.py  requirements.txt  structured_llm.py  test_structured_output.py
output/: analysis.html  analysis_debug.json
reports/: LiFi_report_20250311_080016.md  LiFi_report_20250311_080033.md  LiFi_report_20250311_080253.md  LiFi_report_20250311_080501.md  LiFi_report_20250311_080544.md  LiFi_report_20250311_080751.md  SimpleVault_report_20250311_061813.md  SimpleVault_results_20250311_061813.json  Vault_graph.html  Vault_graph_20250304_075110.html  Vault_report_20250304_075110.md  Vault_report_20250311_073648.md  Vault_report_20250311_074017.md  Vault_report_20250311_075006.md  Vault_report_20250311_075527.md  Vault_report_20250311_075651.md  Vault_report_20250311_082626.md  Vault_report_20250311_083100.md  Vault_report_20250311_095631.md  Vault_report_20250311_095815.md  Vault_report_20250311_100737.md  Vault_report_20250311_101216.md  Vault_report_20250311_105038.md  Vault_report_20250311_105212.md  Vault_report_20250311_114120.md  Vault_results_20250304_075110.json  dataset_description.ApiNotes.md  default_report_20250310_193858.md  default_report_20250310_195013.md  src_project_report_20250311_070110.md  src_project_results_20250311_063829.json  src_project_results_20250311_065156.json  src_project_results_20250311_070110.json  src_project_results_20250311_070550.json  src_project_results_20250311_071323.json
scripts/: analyze_contract.py  dataset_text_analysis.py  dataset_text_analysis2.py  query_security_domains.py
src/: index.js  main.py  workflow_manager.py  workflow_runner.py
starlight/: .env  .env.production
tests/: flare_guidance_test.py  guidance_flare_test.py  guidance_integration_test.py  guidance_test.py  oldrun.py  source_sink_analysis_test.py  test_chunking.py  test_claude_adapter.py  test_cognitive_bias.py  test_direct_guidance.py  test_entrypoints.py  test_guidance_integration.py  test_guidance_syntax.py  test_guidance_version_utils_integrity.py  test_template_processing.ApiNotes.md  test_template_processing.py
tools/: adaptive_query_visualizer.ApiNotes.md  adaptive_query_visualizer.py  analyze_llm_logs.py  analyze_prompts.py  build_vector_store.ApiNotes.md  build_vector_store.py  check_llm_adapter.py  check_ollama_timeout.py  check_prompts_storage.py  check_syntax.py  (+52 more)
(+253 files in other folders)
