[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finite-monkey"
version = "0.1.0"
description = "Smart Contract Audit & Analysis Framework"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "llama-index[packets,utils]>=0.10.0",
    "httpx>=0.27.0",
    "SQLAlchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "aiofiles>=23.2.1",
    "anyio>=4.2.0",
    "tree-sitter>=0.20.4",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "llama-index-embeddings-huggingface>=0.5.2",
    "llama-index-core>=0.12.22",
    "hf-transfer>=0.1.9",
    "llama-index-vector-stores-lancedb>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.finite-monkey-engine]
WORKFLOW_MODEL=""

[tool.setuptools]
packages = ["finite_monkey"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
llama-index = { git = "https://github.com/run-llama/llama_index.git" }
