[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-finite-monkey-engine"
version = "0.1.0"
description = "Smart contract analysis engine using LLM"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
{ name = "Xue Yue", email = "nerbonic@gmail.com" },
{ name = "Shane Macaulay", email = "k2@ktwo.ca" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "ghapi>=0.1.19",
    "loguru>=0.7.0",
    "llama-cpp-python>=0.2.0",
    "httpx>=0.27.0",
    "SQLAlchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "anyio>=4.2.0",
    "tree-sitter>=0.20.4",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "llama-index-embeddings-huggingface>=0.5.2",
    "llama-index-core>=0.12.22",
    "hf-transfer>=0.1.9",
    "llama-index-vector-stores-lancedb>=0.3.0",
    "fpdf>=1.7.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "jinja2>=3.1.2",
    "websockets>=12.0.0",
    "ipython>=8.12.0",
    "pydantic>=2.5.2",
    "griffe>=1.6.0",
    "pydantic-settings>=2.8.1",
    "openzeppelin-solidity-grammar-parser>=0.0.5",
    "aiofiles>=24.1.0",
    "yappi>=1.6.10",
    "ollama>=0.4.7",
    "llama-index-llms-ollama>=0.5.3",
    "tree-sitter-solidity>=1.2.11",
    "streamlit>=1.43.2",
    "python-box>=7.3.2",
    "typer>=0.15.2",
    "matplotlib>=3.10.1",
    "llama-index-program-guidance>=0.3.0",
    "llama-index>=0.12.26",
    "aiohttp>=3.11.14",
    "llama-index-question-gen-guidance>=0.3.0",
    "pytest-asyncio>=0.26.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "intel-extension-for-pytorch>=2.6.0",
    "llama-index-embeddings-ollama>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/a-finite-monkey-engine"
"Bug Tracker" = "https://github.com/yourusername/a-finite-monkey-engine/issues"

[tool.finite-monkey-engine]
# Default configuration values
output = "reports"
DEFAULT_MODEL = "hf.co/lmstudio-community/OlympicCoder-7B-GGUF:Q8_0"
SCAN_MODEL = "hf.co/lmstudio-community/OlympicCoder-7B-GGUF:Q8_0"
CONFIRMATION_MODEL = "hf.co/lmstudio-community/OlympicCoder-7B-GGUF:Q8_0"
WORKFLOW_MODEL = "hf.co/lmstudio-community/OlympicCoder-7B-GGUF:Q8_0"
QUERY_MODEL = "hf.co/lmstudio-community/OlympicCoder-7B-GGUF:Q8_0"
MAX_THREADS_OF_SCAN = 4
REQUEST_TIMEOUT = 300.0
MAX_RETRIES = 5


[project.scripts]
finite-monkey = "finite_monkey.__main__:run_main"
finite-monkey-web = "finite_monkey.web.app:run_server"


[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true

# UV specific settings for better dependency resolution
[tool.uv]
# You can specify resolution strategies, version constraints, etc.
build-backend = "setuptools.build_meta"
#requires = ["setuptools>=42", "wheel"]

